--- a/预备知识.md
+++ b/预备知识.md
@@ -256,7 +256,7 @@ $\bold{A.9}$选择公理($\text{AC}$)设集合$X$的每个元素皆非空,则存
 
 公理集合论是当代数学的正统基础,它的表述范围之广,形式化程度之高,以至于数学本身也堪称为研究对象,诸如何谓证明,一个命题能否被证明,公理系统的一致性(无矛盾)等等都能被赋予明晰的数学内容,这类研究称为__元数学__.数学实践中平素基于自然语言的定义和论证等等,在原则上都能够改写为$\text{ZFC}$公理体系或其他公理体系集合论里的形式化语言,从而为其陈述和验证赋予一套坚实的基础.
 
-# 集合与映射
+# 集合的运算
 
 ## 集合的运算
 
@@ -291,9 +291,9 @@ $$
 
 实分析中则不需要这么严谨的定义积集,一般直接将一切有序偶$(a,b)$(其中$a \in A,b \in B$)所成的集合称为$A$与$B$的直积或者$\text{Cartesian}$积,记为$A\times B$.类似两个集的直积,可以定义多个集的直积.
 
-## 映射
+# 映射
 
-### 二元关系与多元关系
+## 二元关系与多元关系
 
 关系($\text{Relation}$)是指两个或两个以上的事物(事物可以是自己)之间的联系.在集合论中,最简单的关系是两个集合$A,B$之间的关系,我们将其称为二元关系,它可以看作一种对应($\text{correspondence}$).可以将其视为一个有序偶$(a,b)$其中$a\in A,b \in B$(从前文的积集可以得到严格定义,在配对公理$\bold{A.2}$中对其存在性进行了探讨),即当出现第一个元素$a$时,我们根据有序偶得到第二个元素$b$.于是,关系的核心在于有序偶,关系其实就是有序偶所构成的一个集合.
 
@@ -334,19 +334,27 @@ $$
    $$
    
 
-不难发现二元关系对应的是二元$\text{Cartesian}$积,若我们将其推广到多元自然也可以得到多元关系,这部分请读着自行推导.
+不难发现二元关系对应的是二元$\text{Cartesian}$积,若我们将其推广到多元自然也可以得到多元关系,这部分请读者自行推导.
 
 
 
-### 映射
+## 映射
 
-设$A$与$B$都是非空集.若按照一定法则$f$,对于$A$中每个元$x$,都存在$B$中一个确定的元$y$与$x$相对应,则称$f$为定义在$A$上取值于$B$中的一个函数或映射,记作$y = f(x)$.$y$称为$x$在映射$f$之下的像,对于固定的$y$,$A$中满足$y = f(x)$的所有$x$全体称为$y$的原像(使用分离公理模式可以保证成立).集$A$称为$f$的定义域,记作$\text{Dom}(f)$(domain),集$B$称为$f$的值域(image),记作$\text{R}(f)$(在映射中也经常记为$\Im(f)$).若$A$是空集$\varnothing$,我们就规定$f(A) = \varnothing$.
+设$X$与$Y$都是非空集.若按照一定法则$f$,对于$X$中每个元$x$,都存在$Y$中一个确定的元$y$与$x$相对应,则称$f$为定义在$A$上取值于$B$中的一个函数或映射,记作$y = f(x)$.
+
+即
+$$
+f:X \to Y , x \mapsto y
+$$
+$y$称为$x$在映射$f$之下的像,对于固定的$y$,$X$中满足$y = f(x)$的所有$x$全体称为$y$的原像(使用分离公理模式可以保证成立).集$X$称为$f$的定义域,记作$\text{Dom}(f)$(domain),集$Y$称为$f$的值域(range),记作$\text{R}(f)$(在映射中也经常记为$\Im(f)$).若$X$是空集$\varnothing$,我们就规定$f(X) = \varnothing$.
+
+若$A\subset X,B\subset Y$则$f(A) = \{f(x):x\in A\}$称为$A$在$f$下的像集,$f^{-1}(B) = \{x\in X : f(x)\in B\}$称为$B$在$f$下的原像集.
 
 也可以利用配对公理构建映射:
 
 集合间的映射$f:X \to Y$等同于它的图形$\Gamma_f \subset X \times Y$:对每个$x \in X$,交集$\Gamma_f \cap (\{x\}\times Y)$是一个独点集(不难发现这就意味着映射是良定义的),记作$\{f(x)\}$
 
-#### 映射的性质
+### 映射的性质
 
 设有映射$f : A \to B$.若$f(A) =B$,即对于$B$中的每个元$y$,都存在$A$中的元$x$使得$f(x) = y$则称$f$是一个满射.
 
@@ -356,15 +364,44 @@ $$
 
 
 
-设有映射$f : A \to B$且$B_0 \subset B$,则称$A$中那些项在$B_0$中的元的全体为$B_0$在映射$f$下的原像,记作
-$$
-f^{-1}(B_0) = \{x: x\in A ,\text{且} f(x)\in B\}
-$$
-设$A$,$B$是两个集,若存在一个从$A$到$B$的双射$f$,则称$A$与$B$是一一对应,或者说$A$与$B$是对等的.
+定理:
+
+1. $f^{-1}f(A)\supset A$,当且仅当$f$为单射时$f^{-1}f(A) = A$
+
+   对于$x\in A$有$f(x)\in f(A)$于是得到$x\in f^{-1}f(A)$即$A\subset f^{-1}f(A)$
+
+   若$f^{-1}f(A) = A$则对于任意的$x \in f^{-1}f(A)$有$x \in A$,于是$\{x\in X: f(x)\in f(A)\} = A$若$f$不为单射,则对于$x_1 \in A$,存在$x_2 \in X$(不妨设$x_2 \notin A$)使得$f(x_1) = f(x_2)\in f(A)$此时$f^{-1}f(A)\neq A$.
+
+   而$f$为单射时,不存在这样的$x_2$于是得到此时$f^{-1}f(A)=A$
+
+2. $ff^{-1}(B)=f(X)\cap B \subset B$当且仅当$f$为单射时$ff^{-1}(B) = B$
+
+   即证$ff^{-1}(B) = f(X)\cap B$即$\{f(b): b \in f^{-1}(B)\} = f(X)\cap B$不难发现若$x \in \{f(b): b \in f^{-1}(B)\}$则有$x\in f(X)$($B \subset X$)且$x\in B$($x\in f^{-1}(B)$)于是得到$x\in f(X)\cap B$.同理,若$x\in f(X)\cap B$则有$x\in f(X)$且$x\in B$于是得到$f^{-1}(x)\subset X$且$f^{-1}(x) \subset f^{-1}(B)$于是得到$f^{-1}(x)\subset X\cap f^{-1}(B)$即$b \in f^{-1}(x)$有$b \in X \cap   f^{-1}(B)$即$b \in f^{-1}(B)$于是有$x \in \{f(b) : b \in f^{-1}(B)\}$
+
+   任意$ff^{-1}(B) = B$则$\{f(x):x\in f^{-1}(B)\} = B$若$f$不为满射,即$\exists y \in Y,\forall x \in X, f(x)\neq y$于是得到$f(X)\neq Y$即不一定有$f(X)\cap B = B$.
+
+   若$f$为满射则有$f(X) = Y$即$f(X)\cap B = B$
+
+3. $$
+   \begin{eqnarray*}
+   A_1 \subset A_2 \subset X &\Rightarrow& f(A_1)\subset f(A_2)\\
+   B_1 \subset B_2 \subset Y &\Rightarrow& f^{-1}(B_1)\subset f^{-1}(B_2)
+   \end{eqnarray*}
+   $$
+
+   由于$A_1 \subset A_2$于是有$x \in A_1 \Rightarrow x\in A_2$于是得到$x \in f(A_1)\Rightarrow x\in f(A_2)$于是得到$f(A_1)\subset f(A_2)$
+
+   同理得到下式
+
+4. $f(A)\subset B \Leftrightarrow A\subset f^{-1}(B)$当且仅当$f$为满单射时,$f(A) = B \Rightarrow A =f^{-1}(B)$
+
+   根据前几条性质直接得证
 
 
 
-### 常见反例(可以当做习题)
+ 
+
+## 常见反例(可以当做习题)
 
 1. 集合$A$,$B$与映射$f$使得$f(A \cap B) \neq f(A)\cap f(B)$
 
@@ -871,6 +908,8 @@ $\text{Zorn}$引理: 设$P$为非空偏序集,而且$P$中每个链都有上界,
 ## 引入
 
 ### 正常引入
+
+设$A$,$B$是两个集,若存在一个从$A$到$B$的双射$f$,则称$A$与$B$是一一对应,或者说$A$与$B$是对等的.
 
 我们把互相对等的集合归于同一类,不对等的集不属于同一类,对这样的每类集予以一个记号,称这个记号为这一类集中每个集合的势(在代数中称为基数).集合$A$的势记为$|A|$.于是相互对等的集合具有相同的势,即$|A| = |B|$.
 
@@ -1425,11 +1464,135 @@ $$
    \end{eqnarray*}
    $$
 
+   先证明下式,令$E = \{x : \exists k,\text{使得}\forall n \geq k ,x \in A_n\}$,$B = \bigcup_{k = 1}^\infty(\bigcap_{n = k}^\infty A_n)$,下式即为$E = B$.不难发现$\forall x \in B \Leftrightarrow \exists k _0$使得$x\in \bigcap_{n = k_0}^\infty A_n \Leftrightarrow \forall n \geq k_0$,使得$x\in A_n$,即$x\in E$.所以有$E = B$.
+
+   不难发现上式等价于$E^c = B^c$
+
+2. $\bigcap_{ n = 1}^\infty A_n \subset \liminf_{n \to \infty}A_n \subset \limsup_{n \to \infty}A_n \subset \bigcup_{n = 1}^\infty A_n$
+
+   由于$x \in \liminf_{n \to \infty}A_n \Leftrightarrow x\in \{x : \exists k , \text{使得}\forall n \geq k ,x \in A_n\}$,而$x\in \bigcap_{n = 1}^\infty A_n \Leftrightarrow \{x:\forall n \geq 1, x\in A_n \}$于是可以得知$x\in \bigcap_{n = 1}^\infty A_n$就有$x\in \liminf_{n \to \infty}A_n$.
+
+   接下来证明$\liminf_{n \to \infty}A_n \subset \limsup_{n \to \infty}A_n$,由于$\liminf_{n \to \infty}A_n = \{x : \exists k , \text{使得}\forall n \geq k ,x \in A_n\}$于是$x\in \liminf_{n \to \infty}A_n$必然存在$n \geq k$使得$x\in A_n$.
+
+   于是$\liminf_{n \to \infty}A_n \subset \limsup_{n \to \infty}A_n$
+
+   最后仿照第一步的证法可以证得$\limsup_{n \to \infty}A_n \subset \bigcup_{n = 1}^\infty A_n$
+
+3. $$
+   \begin{eqnarray*}
+   B \setminus \limsup_{n \to \infty}A_n = \liminf_{n \to \infty}(B \setminus A_n)\\
+   B \setminus \liminf_{n \to \infty}A_n = \limsup_{n \to \infty}(B \setminus A_n)
+   \end{eqnarray*}
+   $$
+
+   $B \setminus \limsup_{n \to \infty}A_n = B \setminus \bigcap_{k = 1}^\infty(\bigcup_{n = k}^\infty A_n)$即$B \cap(\bigcap_{k = 1}^\infty(\bigcup_{n = k}^\infty A_n))^c$根据$1$有$E^c = \limsup_{n \to \infty}A_n$即$(\bigcup_{n = k}^\infty A_n))^c = E = \liminf_{n \to \infty}A_n$.于是将原式化为$B \cap\bigcup_{k = 1}^\infty(\bigcap_{n = k}^\infty A_n)$,根据交并运算满足的交换律可以得到$B \cap\bigcup_{k = 1}^\infty(\bigcap_{n = k}^\infty A_n) = \bigcup_{k = 1}^\infty (\bigcap_{n = k}^\infty B \cap A_n)$.
+
+   同理得到$B \setminus \liminf_{n \to \infty}A_n$
+
+
+
+## 习题
+
+1. 设$\Q$为有理数集,$\Z$为整数集,$A_n$为分母为$n$的分数全体,即
+   $$
+   A_n = \{\frac{m}{n}: m \in \Z\},n \in \Z_{\geq 1}
+   $$
+   求证$\liminf_{n \to \infty}A_n = \Z$,$\limsup_{n \to \infty}A_n = \Q$.
+
+   [提示]
+
+   不难发现$\Z\subset A_n \subset \Q$.
+
+   于是不难得到
+   $$
+   \Z \subset \liminf_{n \to \infty}A_n \subset \limsup_{n \to \infty}A_n \subset \Q
+   $$
+   于是证明便化为
+
+   1. $\liminf_{n \to \infty}A_n \subset \Z$
+
+      根据集列上下极限的性质$1$可以得到$x \in \liminf_{n \to \infty}A_n \Leftrightarrow x\in \{x : \exists k , \text{使得}\forall n \geq k ,x \in A_n\}$,于是必然有$x \in A_{n}\cap A_{n +1}$于是存在$m_1,m_2\in\Z$使得$x = \frac{m_1}{n}= \frac{m_2}{n+1}$从而得到$m_2 = (n+1)x,m_1 = nx$于是$m_2 - m_1 = x \in \Z$于是得到$\liminf_{n \to \infty}A_n \subset \Z$
+
+      
+
+   2. $\Q \subset \limsup_{n \to \infty}A_n$
+
+      由于$\forall x \in \Q \Leftrightarrow x= \frac{m}{n}$为一个既约分数,于是存在$n$使得$x\in A_n$,对于$\forall k \in \Z_{\geq 1}$可以得到$x= \frac{km}{kn}$即$x \in A_{kn}$,由于$n \geq 1$于是对于任意$k$均存在$kn \geq k$使得$x\in A_{kn}$即$x\in \limsup_{n \to \infty}A_n$
+
+   $\Box$
+
+2. 设$A_n = (a_n,b_n]$,式中$a_n = (-1)^n$,$b_n = 5+(-1)^n + \frac{(-1)^n}{n}$,试求$\liminf_{n \to \infty}A_n$和$\limsup_{n \to \infty}A_n$
+
+   [提示]
+
+   对于$A_n$由于涉及到$(-1)^n$于是我们考虑$A_{2m}$和$A_{2m-1}$
+
+   由于$A_{2m} = (1,6+\frac{1}{2m}]$于是得到$A_{2m}$是递减的,而$A_{2m-1} = (-1,4 - \frac{1}{2m-1}]$是递增的.
+
+   从而得到$\bigcap_{2m =k}^\infty A_{2m} = \lim_{n \to \infty}A_{2m} = (1,6]$
+
+   同理$\bigcap_{2m-1 = k}^\infty A_{2m-1} = \lim_{n \to \infty}A_{2m-1} = (-1,4- \frac{1}{k}]$
+
+   于是得到$\bigcap_{n = k}^\infty A_n = (\bigcap_{2m =k}^\infty A_{2m})\cap(\bigcap_{2m-1 = k}^\infty A_{2m-1}) = (1,6]\cap(-1,4-\frac{1}{k}]$
+
+   即$\liminf_{n \to \infty}A_n = \bigcup_{k = 1}^\infty(\bigcap_{n = k}^\infty A_n) = (1,4)$
+
+   同理得到$\limsup_{n \to \infty}A_n = (-1,6]$
+
+3. 证明:
+   $$
+   (\bigcup_{k = 1}^\infty A_k)\cap(\bigcup_{j = 1}^\infty B_j) = \bigcup_{k = 1}^\infty \bigcup_{j = 1}^\infty(A_k \cap B_j)
+   $$
+   特别地,若$\{A_k\},\{B_k\}$均为递增集列,则
+   $$
+   (\bigcup_{k = 1}^\infty A_k)\cap(\bigcup_{j = 1}^\infty B_j) = \bigcup_{k = 1}^\infty(A_k \cap B_k)
+   $$
+
+   [提示]
+
+   若$x \in (\bigcup_{k = 1}^\infty A_k)\cap(\bigcup_{j = 1}^\infty B_j)$则$(x \in \bigcup_{k = 1}^\infty A_k)\land(x\in \bigcup_{j = 1}^\infty B_j)\Leftrightarrow (\exists k,x\in A_k)\land(\exists j,x\in A_j) \Leftrightarrow (x \in A_k \cap B_j)$.于是得到$x\in \bigcup_{k = 1}^\infty \bigcup_{j = 1}^\infty (A_k \cap B_j)$.
+
+   由于上文的箭头是双向的,于是可以得到
+   $$
+   (\bigcup_{k = 1}^\infty A_k)\cap(\bigcup_{j = 1}^\infty B_j) = \bigcup_{k = 1}^\infty \bigcup_{j = 1}^\infty(A_k \cap B_j)
+   $$
+   若$A_k$和$B_k$均为递增集列,则对于任意的$k$有$A_k \subset A_{k + 1}$于是$\bigcup_{k = 1}^n A_k = A_n$
+
+   于是得到若$x \in \bigcup_{k = 1}^\infty(A_k \cap B_k)$则有$\exists k,x\in A_k \cap B_k \Leftrightarrow (x \in \lim_{n \to \infty}A_n) \land (x\in \lim_{n \to \infty}B_n)\Leftrightarrow x \in (\bigcup_{k = 1}^\infty A_k)\cap(\bigcup_{j = 1}^\infty B_j)$
+
+   $\Box$
+
+   同理,可以证明
+   $$
+   (\bigcap_{k = 1}^\infty A_k)\cup (\bigcap_{j = 1}^\infty B_j) = \bigcap_{k = 1}^\infty \bigcap_{j = 1}^\infty(A_k \cup B_j)
+   $$
+   特别地,若$\{A_n\}$,$\{B_n\}$为递减序列,则
+   $$
+   (\bigcap_{k = 1}^\infty A_k)\cup (\bigcap_{j = 1}^\infty B_j) = \bigcap_{k = 1}^\infty(A_k \cup B_k)
+   $$
+   留给读者
+
    
 
-2. 
+4. 设$\{A_n\}$是递减集列,则
+   $$
+   A_1 = (\bigcap_{n = 1}^\infty A_n)\cup(\bigcup_{k = 1}^\infty (A_k \setminus A_{k +1}))
+   $$
+   [提示]
 
-3. 
+   1. $A_1 \subset (\bigcap_{n = 1}^\infty A_n)\cup(\bigcup_{k = 1}^\infty (A_k \setminus A_{k +1}))$
+
+      $\forall x \in A_1$有$\forall k , x\in A_k$于是要么有$x\in A_k,\forall k \Leftrightarrow x\in \bigcap_{n = 1}^\infty A_n$要么$\exists k , x \in A_k ,x \notin A_{k + 1}\Leftrightarrow x\in A_k \setminus A_{k+1}$
+
+      于是得到$x \in (\bigcap_{n = 1}^\infty A_n) \cup ( \bigcup_{k = 1}^\infty (A_k \setminus A_{k +1}))$,即$A_1 \subset (\bigcap_{n = 1}^\infty A_n)\cup(\bigcup_{k = 1}^\infty (A_k \setminus A_{k +1}))$
+
+   2. $(\bigcap_{n = 1}^\infty A_n)\cup(\bigcup_{k = 1}^\infty (A_k \setminus A_{k +1}))\subset A_1$
+
+      由于$\{A_n\}$递减,于是$\forall k , A_k \subset A_1$于是得到$\bigcap_{n=1}^\infty A_n \subset A_1$,接着有$A_k \setminus A_{k + 1}\subset A_k \subset A_1$于是得到$\bigcup_{k =1}^\infty (A_k \setminus A_{k+1}) \subset A_1$
+
+   综上所述$A_1 = (\bigcap_{n = 1}^\infty A_n)\cup(\bigcup_{k = 1}^\infty (A_k \setminus A_{k +1}))$
+
+
 
 
 
@@ -1625,7 +1788,7 @@ $$
 
 ### 半环概念
 
-定义2(__集半环__) : 如果集族$\mathfrak{S}$包含空集$\varnothing$，它关于交是封闭的，并且具有如下性质：由$\mathfrak{S}$中的$A$和$A_1 \subset A$就可以得到形如$A = \bigcup_{k=1}^n A_k$的$A$的表达式，其中$A_k$是$\mathfrak{S}$中两两不相交的集合，首项是给定集合$A_1$.则称$\mathfrak{S}$为半环(semi\setminus ring).
+定义2(__集半环__) : 如果集族$\mathfrak{S}$包含空集$\varnothing$，它关于交是封闭的，并且具有如下性质：由$\mathfrak{S}$中的$A$和$A_1 \subset A$就可以得到形如$A = \bigcup_{k=1}^n A_k$的$A$的表达式，其中$A_k$是$\mathfrak{S}$中两两不相交的集合，首项是给定集合$A_1$.则称$\mathfrak{S}$为半环(semi ring).
 
 
 
