--- a/预备知识.md
+++ b/预备知识.md
@@ -338,6 +338,42 @@ $$
 
 
 
+### 等价关系
+
+接下来我们揭示一种在二元关系上的特殊关系,这是参考$=$号而推广出来的概念.
+
+首先,我们需要研究一下等号所具备的性质(其不同于其他表示大小的符号的地方).
+
+1. (自反性)$a = a$,这对于大小于号不成立
+2. (对称性)$a = b \Rightarrow b = a$
+3. (传递性)$a = b, b = c \Rightarrow a= c$(这对于偏序集中部分(序)情况不成立,在后文会讲)
+
+而等号显然是一种关系(可以选取所有满足等号的有序偶构成一个集合)
+
+于是我们便可以从中抽象出等价关系这一概念.
+
+对于关系$\sim$,若其为等价关系,其满足
+
+1. (自反性)$a \sim a$,
+2. (对称性)$a \sim b \Rightarrow b \sim a$
+3. (传递性)$a \sim b, b \sim c \Rightarrow a\sim c$
+
+由于其满足自反性,于是集合$A$中任意一个元素$a$都可以对于自身满足$\sim$关系.
+
+于是对于整个集合$A$,我们可以对于每个元素$a$所满足的$a \sim b$使用分离公理模式$\bold{A.2}$构建一个子集$\{b\in A: a\sim b\}$.由于传递性的存在,这个子集中两两元素之间是相互等价的.于是这个子集中任意一个元素都可以对于这个集合进行代表,我们称这个集合为$A$中的一个等价类.记为$[a]$
+
+不难发现$A = \bigcup_{a\in A}[a]$并且若无$a \sim b$,则有$[a] \cap [b] = \varnothing$(读者自证,使用反证法).
+
+于是我们可以将所有的不相交的$[a]$中的$a$提出并做成一个集合$I = \{a: \text{每个}[a]\text{中只有一个元素}a\text{被选出}\}$.
+
+可以得到
+$$
+A = \bigsqcup_{a\in I}[a]
+$$
+其中$\sqcup$表示无交并.上式请读者自行验证.
+
+我们称$A/\sim = \{[a]:a\in I\}$为$A$的商集.
+
 ## 基本的映射
 
 设$X$与$Y$都是非空集.若按照一定法则$f$,对于$X$中每个元$x$,都存在$Y$中一个确定的元$y$与$x$相对应,则称$f$为定义在$A$上取值于$B$中的一个函数或映射,记作$y = f(x)$.
@@ -1805,7 +1841,7 @@ $$
 
 接下来令$E_n(\varepsilon_m) = (A_n(\varepsilon_m)^c) = \{x\in E: |f_n(x) - f(x)| \geq \varepsilon_m\}$便可以导出$\{f_n\}$不收敛于$f(x)$的点集.
 $$
-B = \{x\in E: \lim_{n \to \infty}f_n(x) \neq f(x)\} = A^c = \bigcup_{m = 1}^\infty \bigcap_{k = 1}^\infty\bigcup_{n = k}^\infty E_n(\varepsilon_m)
+B = \{x\in E: \lim_{n \to \infty}f_n(x) \neq f(x)\} = A^c = \bigcup_{m = 1}^\infty \bigcap_{k = 1}^\infty\bigcup_{n = k}^\infty E_n(\varepsilon_m)
 $$
 在实分析中,通常允许函数取$\pm\infty$值(由于前文的基数理论可以对于无穷进行一个略微定量的分析).
 
@@ -2254,10 +2290,182 @@ $$
 
 # 距离空间中的拓扑概念,拓扑空间
 
+## 引入
+
+在微积分中我们常常使用的数列和极限的概念在本质上在两点$x$和$y$之间构建了一个"距离"$d$,并且规定对于数列(函数)有$d(x,y)$为其之间的距离大小这一概念,但是在数学分析中我们考虑的一般是$n$维欧式空间$\R^n$的距离,一般采用$2$-范数作为其距离,即$x = (x_1,\cdots,x_n),y = (y_1,\cdots,y_n)$之间的距离
+$$
+d(x,y) = (\sum_{k = 1}^n |x_k - y_k|^2)^{\frac{1}{2}}
+$$
+不难发现这是一个$\R^n \times \R^n \to \R_{\geq 0}$的映射.由于$\R$上可以轻松地比较大小的关系,于是对于任意集合$X$,若想比较其两两元素之间的距离,将它们作为一个有序偶映射到$\R_{\geq 0}$上似乎是一个不错的选择.
+
+此外我们还可以定义$p$-范数距离等一系列距离
+$$
+d_p(x,y) = (\sum_{k = 1}^n|x_k - y_k|^p)^{\frac{1}{p}}
+$$
+在计算机学科中由于现实生活中误差的广泛存在,对于误差也有一系列的"距离"的说法(一般作为损失函数的一部分).
+
+比如$\text{Hamming}$距离
+$$
+d(x,y) = \sum_{k:x_k \neq y_k}1
+$$
+$d(x,y)$
+
+接下来我们探讨这几个距离之间的相同之处,并总结出距离的定义.
+
+并且结合我们对于距离的定义:距离指的是两点$x,y$之间的长度,即$x,y$之间最短的长度,于是若$x,y$之间任意插入一个点$z$,都需要满足$d(x,y)\leq d(x,z)+d(z,y)$
+
+最短的距离自然是两点重合的情况,也就是$x = y$即$d(x,y) = 0 \Leftrightarrow x = y$
+
+并且$x,y$之间的距离自然也是$y,x$之间的距离,即距离满足对称性,即$d(x,y) = d(y,x)$
+
+不难验证上述的三条性质对于任意的$\R^n(n \geq 1)$均成立.至于那个计算的公式反而不是关键.我们可以抛开它得到一个关于距离的全新定义(距离无非是我们需要量化比较集合中两个元素时所采用的一个工具).
+
+## 距离的定义
+
+定义: 设$X$为一个非空集,若存在映射$d : X \times X \to \R,(x,y)\mapsto d(x,y)$且满足
+
+1. 非负性:$d(x,y) \geq 0,d(x,y) = 0\Leftrightarrow x =y$
+2. 对称性:$d(x,y) = d(y,x)$
+3. 三角不等式:$d(x,y) \leq d(x,z)+d(z,y)$
+
+则称$d(x,y)$是元素$x$与$y$之间的距离.在集合$X$中定义了距离$d$之后,就称$X$为一个距离空间,记为$(X,d)$.但在不引起混淆时,简记为$X$.$(X,d)$中的元素又称为点.
+
+
+
+设$A$为距离空间$(X,d)$的子集.则$A$按照$X$中的距离$d$也形成一个距离空间(这是显而易见的)$(A,d)$,称为$(X,d)$的子空间,我们也简称$A$是$X$的子空间.
+
+
+
+仍然以欧式空间中的距离来配合理解(验证$p$范数距离确实为一个距离).在同一个$n$维向量空间$X$:
+$$
+X= \{x= (x_1,\cdots,x_n): x_k \in \R, 1\leq k \leq n\}
+$$
+中我们可以定义不同距离
+$$
+d_p(x,y) = 
+\left\{
+\begin{array}{c}
+(\sum_{k = 1}^n|x_k - y_k|^p)^{\frac{1}{p}} , &1\leq p < \infty\\
+\max_{1 \leq k \leq n} |x_k - y_k|,& p  = \infty\\
+\end{array}
+\right.
+$$
+接着验证上述$d_p(x,y)$确实是距离,关键在于$\text{H}\ddot{\text{o}}\text{lder}$不等式
+$$
+\sum_{k = 1}^n |a_kb_k| \leq (\sum_{k = 1}^n |a_k|^p)^{\frac{1}{p}}(\sum_{k = 1}^n |b_k|^q)^{\frac{1}{q}}
+$$
+式中$\frac{1}{p}  + \frac{1}{q} = 1$.$1 \leq p < \infty$
+
+和$\text{Minkowski}$不等式
+$$
+(\sum_{k = 1}^n | a_k +b_k|^p)^{\frac{1}{p}} \leq(\sum_{k =1}^n |a_k|^p)^{\frac{1}{p}} + (\sum_{k =1}^n |b_k|^p)^{\frac{1}{p}}
+$$
+不难发现,当$0<p < 1$时,上述不等号需要发生反向.
+
+这两个不等式便可以验证$d_p(x,y)$确实为距离.通常取$(X,d_2)$作为$\R^n$.
+
+设$X$是任一非空集合,对$\forall x,y \in X$,定义
+$$
+d(x,y) = 
+\left\{
+\begin{array}{c}
+1, &\text{若}x \neq y\\
+0, &\text{若}x \ = y\\
+\end{array}
+\right.
+$$
+则$(X,d)$称为离散距离空间,这说明在任何非空集合上都可以定义距离,使之称为距离空间.
+
+
+
+## 由距离导出拓扑概念
+
+### 基础概念
+
+设$X = (X,d)$为距离空间,$x_0 \in X$,$r >0$,则
+$$
+B(x_0,r) = \{x\in X: d(x,x_0)<r\}
+$$
+称为以$x_0$为中心,$r$为半径的开球,也称为$x_0$的$r$球形邻域;而
+$$
+\widetilde{B}(x_0,r) = \{x\in X : d(x,x_0) \leq r\}
+$$
+称为以$x_0$为中心,$r$为半径的闭球.(应当注意这些球当且仅当$X$为$\R^3$时为我们熟知的球,当$X = \R^2$为熟知的圆.而$X$和距离$d$不为前二者时则不一定为我们熟知的形状)
+
+于是不难发现开球和闭球的区别在于球面.
+
+接下来对于球面进行定义
+$$
+S(x_0,r)= \{x\in X : d(x,x_0) = r\}
+$$
+设$A,B \subset X$,则
+
+$d(x,B) = \inf\{d(x,y):y \in B\}$称为$x$到集合$B$的距离;$d(A,B) = \inf\{d(x,y):x\in A,y\in  B\}$称为集合$A,B$之间的距离.
+
+$\text{diam}A = \sup\{d(x,y):x,y \in A\}$称为集$A$的直径,设$A \subset X$,若存在球$B(x_0,r)\supset A$则称$A$是$X$中的有界集.
+
+### 推广出极限
+
+自然的,我们可以将数列极限的概念扩充到距离上,同时,这也是数列极限这一概念在不同集合(以前限定欧式空间)上的推广.
+
+设$x_n,x_0 \in X$,若
+$$
+\lim_{n \to \infty}d(x_0,x_n) = 0
+$$
+即$\forall \varepsilon >0$,$\exists N$使得$\forall n > N$有$d(x_0,x_n)< \varepsilon$,则称点列$\{x_n\}$收敛于$x_0$,记为$\lim_{n \to \infty}x_n = x_0$或$x_n \to x_0(n \to \infty)$
+
+但是需要注意的是,虽然这在形式上与数列极限相同,但是距离空间毕竟并非欧式空间(这也是我们先前标题强调为$\R^1$的缘由),并没有定义加法和数乘运算这类线性运算,况且哪怕定义了线性运算,从$x_n \to a,y_n\to b$也不一定能够得到$x_n + y_n = a+b$并且有界点列$\{x_n\}$也不一定有收敛的子点列,$\text{Cauchy}$点列$\{x_n\}$也不一定收敛.(在抽象空间中会进行讨论)
+
+### 对于点进行分类(开集闭集)
+
+既然定义了距离空间,自然可以对于距离空间中的任一点$x_0$与距离空间中的一个子集$E \subset X$进行考虑,在考虑$x_0$与$E$之间的关系时,可以通过$x_0$所构成的开球与$E$之间的关系进行讨论.
+
+1. $\exists \delta >0$,使得$B(x_0,\delta) \subset E$,则称$x_0$为$E$的内点
+2. $\exists \delta >0$,使得$B(x_0,\delta)\subset E^c$,即$B(x_0,\delta)\cap E = \varnothing$则称$x_0$为$E$的外点
+3. $\forall \delta >0$,有$B(x_0,\delta)\cap E \neq \varnothing ,B(x_0,\delta)\cap E^c \neq \varnothing$则称$x_0$为$E$的界点(若以二维欧式空间来看,$x_0$处于$E$的边界上,但是不一定属于$E$) 
+
+但是在研究点集间的逼近性质时,内点和界点可能具有相同的性质.例如$E$中点列$\{x_n\}$的极限点$x$可能是内点,也可能是界点,所以,我们还需要下述的第二分类法.
+
+1. 若对$\forall \delta >0$,$B(x_0,\delta)\cap(E\setminus\{x_0\})\neq \varnothing$则称$x_0$是$E$的极限点(或聚点),不难发现极限点满足$E$中极限的定义,即存在$E$中的点列使其以$x_0$为极限,不一定属于$E$
+2. 若$\exists \delta >0$,使得$B(x_0,\delta)\cap (E \setminus \{x_0\}) = \varnothing \land x_0 \in E$则称$x_0$是$E$的孤立点
+3. 若对$\forall \delta >0$有$B(x_0,\delta)\cap E = \varnothing$则称$x_0$是$E$的外点
+
+不难发现这两个定义中关于外点的定义是相同的,它的反面,即若对$\forall \delta >0$,使得$B(x_0,\delta)\cap E \neq \varnothing$则称$x_0$是$E$的接触点或附着点.于是$x_0$为$E$的接触点$\Leftrightarrow d(x_0,E) = 0$.所以接触点包括极限点和界点,且极限点和界点都不一定属于$E$.
+
+比方说,设
+$$
+E_1 = \{1,\frac{1}{2},\cdots,\frac{1}{n},\cdots\},E_2 = \{0,1,\frac{1}{2},\cdots,\frac{1}{n},\cdots\},E_3 = \{0,1,\frac{1}{2},\cdots,\frac{1}{n}\}
+$$
+则$\forall x_k = \frac{1}{k}$都是$E_1,E_2,E_3$的孤立点和界点,而$x_0 = 0$是$E_1$和$E_2$的极限点,又是它们的界点,但对于$E_3$来说,对于$\delta < \frac{1}{n}$有$B(0,\delta)\cap E_3  = \varnothing$即其为$E_3$的孤立点.
+
+### 内点或极限点所构成的集合
+
+设$E$为距离空间$(X,d)$的子集,
+
+1. $E$的内点的全体称为$E$的开核,记为$\mathring{E}$
+
+   不难发现$\mathring{E} \subset E$,若$\mathring{E} =E$即$E$中所有点均为内点,则称$E$为开集.所以,$\mathring{E}$实际上是包含于$E$的最大开集
+
+2. $E$的极限点全体称为$E$的导集,记为$E'$
+
+3. 因为$E$的极限点不一定属于$E$,所以还需要讨论$E'$和$E$之间的关系,以下三种可能性都存在,所以每种可能性都有相应的名称
+
+   1. 若$E' \subset E$则称$E$是闭集,它表明闭集对于极限运算是封闭的
+   2. 若$E \subset E'$则称$E$为自密集,它表明$E$中的所有点都是极限点,即$E$中不含有孤立点.
+   3. 若$E'=E$则称$E$为完备集,它表明$E$是不含孤立点的闭集
+
+4. $\overline{E} = E\cup E'$称为$E$的闭包,闭包$\overline{E}$实际上是包含$E$的最小闭集,也是$E$的接触点全体
+
+5. $E$的界点全体称为$E$的边界,记为$\part E$.注意$\part E = \overline{E} \setminus \mathring{E}$而$\mathring{E} = E \setminus \overline{E}$
+
+
+
+
+
 # 连续性,逼近定理
 
 # $\R^n$中开集,闭集的构造以及$\text{Cantor}$集的构造
 
 # 结语
 
-(你以为我在没写完内容之前会写结语?)
+阿巴阿巴,阿巴巴巴,阿巴阿巴阿巴!阿巴阿巴!(你以为我在没写完内容之前会写结语?)
