--- a/预备知识.md
+++ b/预备知识.md
@@ -1,7 +1,5 @@
 
 
-[TOC]
-
 # 序言
 
 由于集合论是宽泛的领域,在实分析中我们所运用到的不过是浅薄的实分析基础.$\xcancel{于是本章是提供给志在速成集合论以进行实分析内容方面研究的人所准备的,关于集合论方面的内容反而会比较少.}$
@@ -2457,6 +2455,133 @@ $$
 4. $\overline{E} = E\cup E'$称为$E$的闭包,闭包$\overline{E}$实际上是包含$E$的最小闭集,也是$E$的接触点全体
 
 5. $E$的界点全体称为$E$的边界,记为$\part E$.注意$\part E = \overline{E} \setminus \mathring{E}$而$\mathring{E} = E \setminus \overline{E}$
+
+注: 上述定义中的拓扑概念与特定的基本空间$X$有关,例如开区间$(a,b)$在$\R$中所有点均为内点,因而是开集.但是若把$(a,b)$视为$\R^2$上的子集时,$(a,b)$就变成了边界,又如取$X = [0,1),0<a<1$,按照欧式距离$d$形成距离空间$(X,d)$,这是$[0,a)$为$X$中的开集,$[a,1)$为$X$中的闭集,它们在$\R$中都是非开非闭的.
+
+
+
+> 延续前文的三个集合$E_1$,$E_2$,$E_3$.因为$\mathring{E_1} = \varnothing$,所以$E_1$不是开集,又因为$E_1' = \{0\}$,不满足$E_1' \subset E_1$,于是$E_1$非闭,同时,其不满足$E_1 \subset E_1'$于是$E_1$不是自密集,$E_1$也非完备集.
+>
+> 而对$E_2$,有$E_2' = \{0\}\subset E_2$于是得知$E_2$是闭集(但是$E_2$仍为非开,非自密,非完备集).
+>
+> $E_3' = \varnothing$于是有$E'_3 \subset E_3$即$E_3$为闭集.
+
+
+
+> 若把有理数$\Q$视为$\R$的子集时,由于$\mathring{\Q} = \varnothing$(由实数的连续性得知),$\Q' = \R$(由有理数的稠密性得知)而$\Q \subset \R = \Q'$于是得到$\Q$为非开非闭的自密集.
+
+从以上几例可以看出,若要判断一个集合$E$开或闭,关键是求$\mathring{E}$和$E'$,再看是否满足$E\subset \mathring{E}$,$E' \subset E$.而判断$x_0$是否为$E$的极限点时,常利用与前文定义中的等价形式,即在$E$中是否存在点列$\{x_n\}$使得$x_n \neq x_0$而且$x_n \to x_0$(即$d(x_n,x_0) \to 0 ,n \to \infty$)还应当注意的是,若$A \neq \varnothing$,$x \notin \overline{A}$则$d(x,A)>0$
+
+### 稠密性和可分性
+
+我们将有理数$\Q$和实数集$\R$(或无理数集)中稠密的概念推广到距离空间之上:
+
+首先回顾$\Q$稠密的定义(见前文基数部分)
+
+> 定义(稠密性) 全序集$(X,<)$是稠密的,如果它至少有两个元素,并且对于任意的$a,b\in X$,如果$a<b$,则存在$x\in X$满足$a<x<b$
+
+通过前文的讨论我们得到,在距离空间中任何定义均为相对的,于是对于距离空间$(X,d)$,集合$A$,需要一个包含它的集合$E$来展现其稠密性.
+考虑$\Q$,不难发现其导集$\Q' = \R$,那么有$\R \subset \Q' = \Q \cup \Q' = \overline{\Q}$,对于任意的$r \in \R$,不难发现稠密性保证了存在$\{x_n\}\subset \Q$使得$x_n \to r$($n \to \infty$),换句话说$\R$的点均为$\Q$的极限点,即极限点这一概念与稠密性密切相关,不难发现若$\Q$不具有稠密性,则无法将$\R$中的所有元素均视为极限点(存在$a,b \in \Q$不存在$x \in \Q$使得$a<x<b$但是在实数集中必然存在$a<r<b$这就造成了我们无法逼近$r$,即$r$不为极限点).于是我们可以将稠密性的概念转化为在距离空间中,对于两个集合$A$和$E$,探讨$E$中的点是否可以由$A$中的点进行逼近得到的问题(若$A$在$E$中稠密则自然可以进行逼近).
+
+定义(距离空间上的稠密) 设$(X,d)$为距离空间,$A,E \subset X$,若$E \subset \overline{A}$,即$\forall x \in E$存在$\{x_n\} \subset A$使得$x_n \to x(n \to \infty)$则称$A$在$E$中__稠密__.它表明$E$中所有元素均可以用$A$中的元素来逼近;若$\mathring{(\overline{E})} = \varnothing$,即$E$的闭包中$\overline{E}$中无内点,则称$E$是$X$中的__疏集__(__疏朗集__)或__无处稠密集__.若$(X,d)$中存在一个可数的稠密子集,则称$(X,d)$是可分的距离空间.
+
+> $n$维欧式空间$\R^n$中坐标为有理点的集$A$是$\R^n$的可数的稠密子集,所以$\R^n$是可分的距离空间
+
+> $C[a,b]$表示在区间$[a,b]$上的连续函数全体,对于$\forall x,y \in C[a,b]$.定义距离
+> $$
+> d(x,y) = \max_{a \leq t \leq b}|x(t) - y(t)|
+> $$
+> 则$C[a,b]$按照上述$d$成为距离空间,接下来证明这个空间也是可分的.事实上,使用$\text{Weierstrass}$逼近定理,对于$\forall f \in C[a,b]$$\forall \varepsilon >0$存在代数多项式$P_n(x)$使得
+> $$
+> d(f,p) = \max_{a \leq t \leq b}|f(x) - P_n(x)|<\varepsilon
+> $$
+> 这表明代数多项式集合$P = \{P_n(x)\}$在$C[a,b]$中是稠密的,但它不是可数集(由于实数集不可数).
+>
+> 我们利用有理数集$\Q$在$\R$中的稠密性,对于每个实系数代数多项式$P_(x) = \sum_{k = 0}^n a_k x^k$可用有理系数多项式$Q_n(x) = \sum_{k = 0}^n r_k x^k$一致逼近.即对$\forall a_k \in \R$,$\exists r_k \in \Q$使得
+> $$
+> |a_k - r_k| < \frac{\varepsilon}{M+1}
+> $$
+> 式中
+> $$
+> M= \sum_{k = 0}^n M_k , M_k = \max\{|a|^k,|b|^k\}
+> $$
+> 从而
+> $$
+> |P_n(x) - Q_n(x)| = |\sum_{k = 0}^n (a_k - r_k)x^k | \leq \sum_{k = 0}^n |a_k - r_k| M_k < \frac{\varepsilon}{M+1}M < \varepsilon
+> $$
+> 这也就表明$|Q_n(x)|$在$C[a,b]$中是稠密的,并且$\{Q_n(a,b)\}$(有理数集的可数性,其多项式本质上可以视为一个笛卡尔积,也是可数的)于是$C[a,b]$是一个可分的距离空间.
+
+### 开核$\mathring{E}$,导集$E'$和闭包$\overline{E}$的性质
+
+定理: $x \in E' \Leftrightarrow$在$E$中存在互异的点列$x_k \to x_0$($k \to \infty$)
+
+[证明]
+
+由极限点的定义立刻得出.$\Box$
+
+定理: 设$A \subset B$则$A' \subset B'$,$\mathring{A} \subset \mathring{B}$,$\overline{A}\subset \overline{B}$
+
+[证明]
+
+由于$A \subset B$于是对于$x \in A\Rightarrow x \in B$于是对于$A$中逼近于任意一点$x_0 \in A'$的点列$\{x_k\}$都有$\{x_k\}\subset B$于是得到$x_0 \in B'$即$A' \subset B'$.
+
+于是得到$A\cup A' = \overline{A} \subset B\cup B' = \overline{B}$
+
+若存在$\delta$使得$B(x_0,\delta)\subset A \subset B$于是自然有$\mathring{A}\subset \mathring{B}$$\Box$
+
+定理: $(A\cup B)' = A' \cup B'; \overline{A \cup B} = \overline{A}\cup \overline{B}$
+
+[证明]
+
+由于$x \in A\cup B \Leftrightarrow (x\in A)\lor (x\in B)$于是若$x_0 \in (A\cup B)'$存在$\{x_k\}\to x_0,(k \to \infty)$其中$\{x_k\} \subset A \cup B$,于是取出$\{x_k\}$在$A$中的部分构成$\{x_{A_k}\}$,取出$\{x_k\}$在$B$中的部分构成$\{x_{B_k}\}$可以得到$(x_{A_k} \to x_0 , (k \to \infty)) \lor (x_{B_k}\to x_0, k \to \infty)$.即$(x_0 \in A) \lor (x_0 \in B)$.若$x \in A' \cup B'$自然有$x \in (A\cup B)'$
+
+同理证明后式$\Box$
+
+由此还可以推出对于有限并的情形成立,但对于无穷并的情况,只能成立下列包含关系
+$$
+\bigcup_{a \in I}E_a' \subset (\bigcup_{a\in I}E_a )', \bigcup_{a \in I}\overline{E_a} \subset \overline{(\bigcup_{a\in I}E_a )}
+$$
+式中的指标集为无限集.而对于开核的并运算,无论是否为有限并,均只存在包含关系.
+$$
+\mathring{A}\cup  \mathring{B} \subset \mathring{(A\cup B)},\bigcup_{a \in I}\mathring{E_a} \subset \mathring{(\bigcup_{a\in I}E_a )}
+$$
+至于证明考虑$(0,1]$和$[1,2)$即可
+
+接下来考虑交的情况.
+
+定理: 
+$$
+(A \cap B)' \subset A' \cap B'\\
+\overline{A\cap B}\subset \overline{A}\cap \overline{B}\\
+\mathring{A}\cap \mathring{B} =  \mathring{(A \cap B)}
+$$
+但是$\mathring{(\bigcap_{k = 1}^\infty A_k)} \subset \bigcap_{k = 1}^\infty \mathring{A_k}$
+
+[证明]
+
+$x \in (A\cap B)'$则存在$\{x_k\}\subset A\cap B$使得$x_k \to x, (k \to \infty)$由于$(x_k \in A) \land(x_k \in B)$于是有$(x\in A')\land(x\in B')$即$(A\cap B)' \subset A' \cap B'$
+
+同理证下式.
+
+$x \in \mathring{A}\cap \mathring{B} \Leftrightarrow (x\in \mathring{A}) \land(x \in \mathring{B})$则存在$\delta >0$使得$(B(x,\delta) \subset A) \land (B(x,\delta) \subset B)$即$B(x,\delta) \subset A \cap B$即$\mathring{A}\cap \mathring{B} = \mathring{(A\cap B)}$.$\Box$
+
+
+
+定理:
+$$
+\overline{E} = E\cup \part E = \mathring{E}\cup \part E\\
+\part E = \part(E^c)\\
+\part E = \overline{E}\cap \overline{E^c}
+$$
+[证明]
+
+$\overline{E} = E\cup E'$接下来证明$E \cup E' = \mathring{E} \cup \part E$.由于$E'$为极限点的全体,$E \cup E'$即为$E$的极限点与孤立点的全体,即为$E$的内点与$E$的界点的全体,即$\mathring{E} \cup \part E$.由于$\mathring{E} = E\setminus \part E$.即$\overline{E} = (E\setminus \part E) \cup \part E$第一个式子得证.
+
+$x\in \part E\Leftrightarrow \forall \delta >0(B(x,\delta)\cap E \neq \varnothing)\land(B(x,\delta)\cap E^c \neq \varnothing)\Leftrightarrow\forall \delta >0(B(x,\delta)\cap (E^c)^c \neq \varnothing)\land(B(x,\delta)\cap E^c \neq \varnothing) \Leftrightarrow x \in \part (E^c)$.
+
+$\overline{E^c} = E^c \cup \part (E^c) = E^c \cup \part E$且有$E\cap E^c = \varnothing$于是得知$\overline{E} (E \cup \part E)\cap(E^c \cup \part E) = \part E$
+
+
 
 
 
