暂停更新转Rudin

--- a/预备知识.md
+++ b/预备知识.md
@@ -583,7 +583,7 @@ $$
 
 不难发现序关系其实可以表现为一张有向图,比如
 
-![image-20230630165012398](./image/1.png)
+![1](./image/%E9%A2%84%E5%A4%87%E7%9F%A5%E8%AF%86/1.png)
 
 上图就是一种序关系,其中$\to$可以视为$\leq$,于是不难发现,在这种关系下,我们无法确定$d$和$e$之间的大小关系,那么能够确定两两元素之间的大小关系的偏序集也就具有了一定的特殊性,不难发现其构造应当像一条链子或者线一样.
 
@@ -1989,7 +1989,7 @@ $$
 A\Delta (A\cap B) &=& (A\cup (A\cap B)) \setminus (A\cap (A\cap B))\\
 &=& \{x : x\in A\cup (A\cap B) \land x\notin (A\cap B)\}\\
 &=& \{x : x\in A \land x\notin B\}\\
-&=& A-B
+&=& A\setminus B
 $$
 由此我们证明了对于任何$A$,$B$均有其差集和并集运算封闭与环$\mathfrak{R}$.$\Box$
 
@@ -2542,10 +2542,19 @@ $$
 \bigcup_{a \in I}E_a' \subset (\bigcup_{a\in I}E_a )', \bigcup_{a \in I}\overline{E_a} \subset \overline{(\bigcup_{a\in I}E_a )}
 $$
 式中的指标集为无限集.而对于开核的并运算,无论是否为有限并,均只存在包含关系.
+
+> $\Q = \{r_1,r_2,\cdots,r_n,\cdots\}$为有理数集.按照欧式距离$d$构成距离空间$(\Q,d)$.$A_n = \{r_n\}$是由有理数$r_n$组成的单点集,则$A_n' = \varnothing$从而得到$\bigcup_{n = 1}^\infty A_n = \varnothing$.
+>
+> 另一方面$(\bigcup_{n = 1}^\infty A_n)' = \Q' = \R$所以存在严格的包含关系.
+>
+> 又由于$\overline{A_n} = A_n \cup A_n' = A_n \cup \varnothing = A_n$得到$\bigcup_{n = 1}^\infty \overline{A_n}= \Q$而$\overline{\bigcup_{n = 1}^\infty A_n} = \R$这就证明了为何在无穷并的情况下只能包含而不能相等
+
 $$
-\mathring{A}\cup  \mathring{B} \subset \mathring{(A\cup B)},\bigcup_{a \in I}\mathring{E_a} \subset \mathring{(\bigcup_{a\in I}E_a )}
+\mathring{A}\cup  \mathring{B} \subset{(A\cup B)} \mathring{},\bigcup_{a \in I}\mathring{E_a} \subset{(\bigcup_{a\in I}E_a )} \mathring{}
 $$
-至于证明考虑$(0,1]$和$[1,2)$即可
+> 前者至于证明考虑$(0,1]$和$[1,2)$即可
+>
+> 
 
 接下来考虑交的情况.
 
@@ -2553,7 +2562,7 @@ $$
 $$
 (A \cap B)' \subset A' \cap B'\\
 \overline{A\cap B}\subset \overline{A}\cap \overline{B}\\
-\mathring{A}\cap \mathring{B} =  \mathring{(A \cap B)}
+\mathring{A}\cap \mathring{B} =  {(A \cap B)}\mathring{}
 $$
 但是$\mathring{(\bigcap_{k = 1}^\infty A_k)} \subset \bigcap_{k = 1}^\infty \mathring{A_k}$
 
@@ -2579,11 +2588,24 @@ $\overline{E} = E\cup E'$接下来证明$E \cup E' = \mathring{E} \cup \part E$.
 
 $x\in \part E\Leftrightarrow \forall \delta >0(B(x,\delta)\cap E \neq \varnothing)\land(B(x,\delta)\cap E^c \neq \varnothing)\Leftrightarrow\forall \delta >0(B(x,\delta)\cap (E^c)^c \neq \varnothing)\land(B(x,\delta)\cap E^c \neq \varnothing) \Leftrightarrow x \in \part (E^c)$.
 
-$\overline{E^c} = E^c \cup \part (E^c) = E^c \cup \part E$且有$E\cap E^c = \varnothing$于是得知$\overline{E} (E \cup \part E)\cap(E^c \cup \part E) = \part E$
+$\overline{E^c} = E^c \cup \part (E^c) = E^c \cup \part E$且有$E\cap E^c = \varnothing$于是得知$\overline{E} (E \cup \part E)\cap(E^c \cup \part E) = \part E$.$\Box$
 
 
 
+定理(闭包和开核的对偶性):
+$$
+(\mathring{E})^c &=& \overline{E^c}\\
+(\overline{E})^c &=& {(E^c)}\mathring{}
+$$
+ 由此可以推出$\overline{E} = [\mathring{(E^c)}]^c$
 
+[证明]
+
+$(\mathring{E})^c = (E \setminus \part E)^c = [E \cap (\part E)^c]^c = E^c \cup(\part E) = E^c\cup\part (E^c) = \overline{E^c}$
+
+$(\overline{E})^c = (\mathring{E}\cup \part E)^c = (\mathring{E})^c \cap (\part E)^c = \overline{E^c}\setminus \part E = \overline{E^c} \setminus \part (E^c) = {(E^c)}\mathring{}$
+
+至于最后一步即对$(\overline{E})^c = {(E^c)} \mathring{}$再求一个补集即可.
 
 
 
